--- a/recursor.conf
+++ b/recursor.conf
@@ -1,6 +1,4 @@
 daemon=no
 local-address=0.0.0.0
 local-port=53
-allow-from=0.0.0.0/0
-setgid=recursor
-setuid=recursor
+allow-from=127.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 169.254.0.0/16, 192.168.0.0/16, 172.16.0.0/12, ::1/128, fc00::/7, fe80::/10
